test/Common/LinkerScriptParsing/Errors/Memory/InvalidOriginLength/Inputs/script2.t
MEMORY {
  A (rx) : ORIGIN = 0x100, leng = 0x200
}